add conda recipe

--- a/aprepro/CMakeLists.txt
+++ b/aprepro/CMakeLists.txt
@@ -1,15 +1,10 @@
 INCLUDE_DIRECTORIES(
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}
+  "../aprepro_lib"
 )
 
-SET(SOURCES
-	aprepro.C
-)
 
-ADD_EXECUTABLE(
-	aprepro
-	SOURCES ${SOURCES}
-)
-
-install_executable(aprepro)
+ADD_EXECUTABLE(aprepro aprepro.C)
+target_link_libraries(aprepro aprepro_lib)
+install(TARGETS aprepro DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
