--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(aprepro)
 
+
+ADD_DEFINITIONS(-std=c++11)
+
 add_subdirectory(aprepro_lib)
 add_subdirectory(aprepro)
